2005-12-19  Prakash Punnoor <prakash@punnoor.de>

	* test/testlib.c, test/testlib.h: Add _RotatePointAboutAxis()
	
	* test/testlistener3.c, test/testlistener4.c:
	Use _RotatePointAboutAxis() instead of OpenAL internal one to
	prevent linking error if symbol visibility is used
l
2005-12-17  Prakash Punnoor <prakash@punnoor.de>

	* admin/CMakeModules/CMakeASMInformation.cmake: don't use C flags
	
	* CMakeLists.txt, common/include/AL/alc.h, common/include/AL/al.h:
	gcc visibility support
	
	* src/arch/i386/x86_cpu_caps_detect_prk.nasm,
	src/arch/i386/memcpy_mmx_prk.nasm: prevent executable stack

2005-12-15  Sven Panne  <sven.panne@aedion.de>

	* include/AL/Makefile.am: Removed.

2005-12-15  Prakash Punnoor <prakash@punnoor.de>

	* README: CMake cache clearing typos

2005-12-12  Prakash Punnoor <prakash@punnoor.de>

	* README: CMake cache clearing

2005-12-11  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: don't check for time.h anymore;
	correctly check for Linux for ALSA

2005-12-10  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: set some vars for openal-config.in;
	enable ALSA option only for Linux, DSOUND only for Win32
	
	* README: some typos

2005-12-10  Sven Panne  <sven.panne@aedion.de>

	* src/al_buffer.c: Fixed buffer attribute getters (thanks to Shawn
	Kirst for  pointing this out).  Renamed MAX_LISTENER_NUM_VALUES to
	the more sensible MAX_BUFFER_NUM_VALUES.

2005-12-08  Sven Panne  <sven.panne@aedion.de>

	* admin/pkgconfig/openal-config.in: Overhauled quite a bit. The order of
	commandline options does not matter anymore. Added more standard GNU
	prefixes. Added --static option (currently a no-op).

2005-12-04  Sven Panne  <sven.panne@aedion.de>

	* configure.ac, src/Makefile.am: Do ALSA detection and conditional
	inclusion the autotools way, minimizing tests and giving nice feedback
	to the user.

2005-12-03  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: C99 stuff, better alsa detection, threading